Chore/sonar scan (#32)
* build(maven): rename artifactId to oebs-omada-api

* refactor(logging): use concise regex digit classes in FNR masking

* refactor(kalllogg): extract duplicated opprydding source literal

* fix(healthcheck): removed  commented out import

* refactor(exception): remove wildcard ResponseEntity in GlobalExceptionHandler

* refactor(application): guard startup log method calls with isInfoEnabled

* refactor(ping): removed commented out import

* refactor(plsqlmessagecodes): removed TODO comment

* refactor(plsqlexecption): changed method from public to protected

* refactor(regex): replace redundant single-char character class

* refactor(scim): replace Collectors.toList() with Stream.toList()

* refactor: add private constructor to ResponseEntityBuilder

* refactor(scim-group): extract group path constants and replace generic exception

* refactor(scim-user): removed unused import

* refactor(scim): extract user path/action constants and tighten exception handling

* refactor(sonar): tighten exception handling, harden logging regex, and clean throws declarations

* refactor(startup-logger): extract duplicated literals to constants

* refactor(swagger): extract duplicated OpenAPI literals to constants

* refactor(swagger): extract duplicated OpenAPI literals to constants

* refactor(repository): replace field injection with constructor injection in PlsqlProcedureRepository

* test(coverage): add targeted unit tests for logging utils and kalllogg cleanup

* test: increase Sonar new-code coverage with targeted unit tests

* test(coverage): add focused unit tests for remaining low-covered config, logging, scim, and app classes

* test(coverage): add focused unit tests for remaining low-covered config, logging, scim, and app classes

* test(coverage): add focused unit tests for remaining low-covered config, logging, scim, and app classes

* test(coverage): add targeted startup/logging tests and make Application main path testable

- add focused test